# backtesting

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
backtesting/: __init__.py  _plotting.py  _stats.py  _util.py  backtesting.py  lib.py  live.py  live_mod.py
backtesting/livetrading/: broker.py  event.py  executor.py  rest_cli.py  websocket_client.py
backtesting/provider/: ibkr.py
backtesting/test/: GOOG.csv  SPY.csv  __init__.py  __main__.py  _additional_test.py  _test.py
doc/examples/: Multiple Time Frames.ipynb  Multiple Time Frames.py  Parameter Heatmap & Optimization.ipynb  Parameter Heatmap & Optimization.py  Quick Start User Guide.ipynb  Quick Start User Guide.py  Strategies Library.py  Trading with Machine Learning.ipynb  Trading with Machine Learning.py
scripts/: ibkr-livedata.py  live_trading.py
strategies/: sma-cross.py
test_strategies/: conftest.py  test_sma_cross.py
test_strategies/indices/: test_sma_cross.py
tests/: test_livetrading.py
