[tool.poetry]
name = "backtesting"
version = "0.1.0"
description = "Backtest trading strategies in Python"
readme = "README.md"
homepage = "https://kernc.github.io/backtesting.py/"
repository = "https://github.com/kernc/backtesting.py"
documentation = "https://kernc.github.io/backtesting.py/doc/backtesting/"
keywords = ["backtesting", "trading", "strategy", "market", "finance"]
license = "AGPL-3.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

authors = ["Karel Číž <karel.ciz@gmail.com>"]
maintainers = ["Karel Číž <karel.ciz@gmail.com>"]

packages = [{include = "backtesting"}]

include = ["backtesting/test/*.csv"]

[tool.poetry.dependencies]
python = ">=3.13"
pandas = ">=1.3.0,<3.0.0"
numpy = ">=2.0.0"
ipython = ">=7.0.0"
bokeh = ">=2.4.0"
# pandas-ta = "^0.3.14b"
# pandas-ta= { path = "/code/pandas-ta", develop = false }
pandas-ta = { git = "https://github.com/huynle/pandas-ta.git", branch = "main" }
scikit-optimize = {version = "^0", optional = true}
tqdm = "^4"
sambo = "^1.25.1"
joblib = "^1.4.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2"
pytest = "^7"
notebook = "^7"
vprof = "^0.38"
pytest-cov = "^4"
black = "^24"
mkdocs = "^1"
mkdocstrings = {extras = ["python"], version = "^0.24"}
mkdocs-material = "^9"
mkdocs-click = "^0.8"
mkdocs-jupyter = "^0.24"
lxml-html-clean = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Exclude line length checks
ignore = ["E501"]

[tool.ruff.lint]
select = ["F"]
ignore = []

[tool.ruff.format]
quote-style = "preserve"  # Preserves single quotes instead of converting to double quotes
skip-magic-trailing-comma = true
