[project]
name = "backtesting"
version = "0.1.0"
description = "Backtest trading strategies in Python"
authors = [{ name = "Karel Číž", email = "karel.ciz@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
license = "AGPL-3.0"
maintainers = [{ name = "Karel Číž", email = "karel.ciz@gmail.com" }]
keywords = [
    "backtesting",
    "trading",
    "strategy",
    "market",
    "finance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.3.0,<3.0.0",
    "numpy>=2.0.0",
    "ipython>=7.0.0",
    "bokeh>=2.4.0",
    "pandas-ta",
    "scikit-optimize>=0,<1",
    "tqdm>=4,<5",
    "sambo>=1.25.1,<2",
    "joblib>=1.4.2,<2",
    "scikit-learn>=1.6.1,<2",
    "matplotlib>=3.10.1,<4",
]

[project.urls]
Homepage = "https://kernc.github.io/backtesting.py/"
Repository = "https://github.com/kernc/backtesting.py"
Documentation = "https://kernc.github.io/backtesting.py/doc/backtesting/"

[dependency-groups]
dev = [
    "autopep8>=2,<3",
    "pytest>=7,<8",
    "notebook>=7,<8",
    "vprof>=0.38,<0.39",
    "pytest-cov>=4,<5",
    "black>=24,<25",
    "mkdocs>=1,<2",
    "mkdocstrings[python]>=0.24,<0.25",
    "mkdocs-material>=9,<10",
    "mkdocs-click>=0.8,<0.9",
    "mkdocs-jupyter>=0.24,<0.25",
    "lxml-html-clean>=0.1,<0.2",
]

[tool.uv]

[tool.uv.sources]
pandas-ta = { git = "https://github.com/huynle/pandas-ta.git", branch = "main" }

[tool.hatch.build.targets.sdist]
include = [
    "backtesting",
    "backtesting/test/*.csv",
]

[tool.hatch.build.targets.wheel]
include = [
    "backtesting",
    "backtesting/test/*.csv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Exclude line length checks
ignore = ["E501"]

[tool.ruff.lint]
select = ["F"]
ignore = []

[tool.ruff.format]
quote-style = "preserve"  # Preserves single quotes instead of converting to double quotes
skip-magic-trailing-comma = true
