[tool.poetry]
name = "backtesting"
version = "0.1.0"
description = "Backtest trading strategies in Python"
authors = ["Karel Číž <karel.ciz@gmail.com>"]
maintainers = ["Karel Číž <karel.ciz@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://kernc.github.io/backtesting.py/"
repository = "https://github.com/kernc/backtesting.py"
documentation = "https://kernc.github.io/backtesting.py/doc/backtesting/"
keywords = [
    "backtesting",
    "trading",
    "strategy",
    "market",
    "finance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "backtesting" }]
include = ["backtesting/test/*.csv"]

[tool.poetry.dependencies]
python = ">=3.13"
pandas = ">=1.3.0,<3.0.0"
numpy = ">=2.0.0"
ipython = ">=7.0.0"
bokeh = ">=2.4.0"
pandas-ta = {git = "https://github.com/huynle/pandas-ta.git", branch = "main"}
scikit-optimize = ">=0,<1"
tqdm = ">=4,<5"
sambo = ">=1.25.1,<2"
joblib = ">=1.4.2,<2"
scikit-learn = ">=1.6.1,<2"
matplotlib = ">=3.10.1,<4"
setuptools = ">=60.0.0" # Add setuptools for pkg_resources

[tool.poetry.group.dev.dependencies]
autopep8 = ">=2,<3"
pytest = ">=7,<8"
notebook = ">=7,<8"
vprof = ">=0.38,<0.39"
pytest-cov = ">=4,<5"
black = ">=24,<25"
mkdocs = ">=1,<2"
mkdocstrings = {version = ">=0.24,<0.25", extras = ["python"]}
mkdocs-material = ">=9,<10"
mkdocs-click = ">=0.8,<0.9"
mkdocs-jupyter = ">=0.24,<0.25"
lxml-html-clean = ">=0.1,<0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude line length checks
ignore = ["E501"]

[tool.ruff.lint]
select = ["F"]
ignore = []

[tool.ruff.format]
quote-style = "preserve"  # Preserves single quotes instead of converting to double quotes
skip-magic-trailing-comma = true
